# rendertrust

./: .env.template  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_FLOW.md  Dockerfile  LICENSING_SUMMARY.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.edge.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  spec_template.md
.claude/: AGENT_OUTPUT_GUIDE.md  README.md  SETUP.md  TROUBLESHOOTING.md  hooks-config.json  settings.json  team-config.json
.claude/agents/: README.md  be-developer.md  bsa.md  data-engineer.md  data-provisioning-eng.md  fe-developer.md  qas.md  rte.md  security-engineer.md  system-architect.md  tdm.md  tech-writer.md
.claude/commands/: README.md  audit-deps.md  check-docker-status.md  check-workflow.md  deploy-dev.md  dev-health.md  dev-logs.md  end-work.md  local-deploy.md  local-sync.md  pre-pr.md  quick-fix.md  release.md  remote-deploy.md  remote-health.md  remote-logs.md  remote-rollback.md  remote-status.md  rollback-dev.md  start-work.md  sync-linear.md  test-pr-docker.md
.claude/hooks/: pre-bash-rls-validation.sh
.claude/skills/: README.md
.gemini/: GEMINI.md  README.md
.gemini/commands/: README.md
.gemini/skills/: README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-validation.yml  rendertrust-deploy.yml  security.yml
agent_providers/augment/: AUGMENT_WORKFLOW_GUIDE.md  instructions.md
alembic/: env.py
alembic/versions/: 0001_baseline_users_projects.py  0002_add_credit_ledger_entries.py  0003_add_scheduler_tables.py  0004_add_job_result_columns.py  0005_add_dead_letter_queue.py  0006_add_job_pricing.py
ci/: deploy.sh  rendertrust-build.yml
ci/cloudflare/: docker-compose.tunnel.yml  setup-guide.md  tunnel-config.yml  waf-rules.json
ci/coolify/: Dockerfile.prod  docker-compose.coolify.yml  docker-compose.override.example.yml  entrypoint.sh  env.template  setup-guide.md
ci/grafana/: prometheus.yml
ci/loki/: README.md  docker-compose.loki.yml  grafana-datasources.yml  loki-config.yml  promtail-config.yml
community/: .env.example  README.md  next.config.js  package.json  postcss.config.js  tailwind.config.ts
community/app/: globals.css  layout.tsx  page.tsx
community/components/: footer.tsx  hero.tsx  leaderboard-table.tsx  network-stats.tsx  stat-card.tsx
community/lib/: api.ts  mock-data.ts  types.ts
core/: __init__.py  config.py  database.py  main.py  metrics.py
core/api/: __init__.py
core/auth/: __init__.py  blacklist.py  jwt.py  middleware.py  rate_limit.py
core/billing/: models.py  payout.py  usage.py  webhook.py
core/ledger/: __init__.py  service.py
core/middleware/: __init__.py  request_id.py
core/models/: __init__.py  base.py
core/relay/: __init__.py  manager.py  protocol.py  server.py  tls.py
core/scheduler/: __init__.py  auth.py  autoscale.py  circuit_breaker.py  crypto.py  dispatch.py  fleet.py  job_service.py  models.py  retry.py  router.py  service.py
core/storage/: __init__.py  config.py  encryption.py  service.py
dark-factory/: README.md
dark-factory/docs/: CURSOR-SSH-GUIDE.md  DARK-FACTORY-GUIDE.md  MERGE-QUEUE-POLICY.md
dark-factory/scripts/: README.md  factory-setup.sh  factory-start.sh
dark-factory/templates/: README.md
docs/adr/: ADR-001-project-foundation-architecture.md
docs/api/: openapi.json
docs/arch/: RenderTrust_Architect_Manual.md
docs/audits/: legacy-billing-migration-audit.md
docs/confluence/: 00-system-documentation-home.md  01-architecture-overview.md  02-core-platform.md  03-authentication-security.md  04-credit-billing.md  05-scheduler-dispatch.md  06-edge-node-system.md  07-object-storage.md  08-blockchain-anchoring.md  09-infrastructure-deployment.md  10-api-reference.md  11-user-guide-creator.md  12-user-guide-node-operator.md  13-user-guide-administrator.md  14-user-guide-developer.md
docs/dr/: runbook.md
docs/guides/: AGENT_TEAM_GUIDE.md  GEMINI_CLI_AUTHORING_GUIDE.md  GETTING-STARTED.md  OPTIONAL-FEATURES.md  ROUND-TABLE-PHILOSOPHY.md  SKILL_AUTHORING_GUIDE.md  WORKSPACE-ADOPTION-GUIDE.md
docs/legal/: RenderTrust_MSA_v0.1.md  WTFB_MSA_v0.1.md
docs/onboarding/: AGENT-SETUP-GUIDE.md  AGENT-TEAMS-GUIDE.md  DAY-1-CHECKLIST.md  ENGINEER-DAILY-WORKFLOW.md  HARNESS-VERIFICATION-GUIDE.md  QAS-DAILY-WORKFLOW.md
docs/operations/: migration-runbook.md
docs/security/: SECURITY_FIRST_ARCHITECTURE.md
docs/sop/: PRE_PR_VALIDATION_CHECKLIST.md
docs/spikes/: x402-evaluation.md  (+2 more)
edgekit/: Dockerfile  entrypoint.py  health.py
frontend/: README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
loadtest/: REPORT.md
patterns_library/: README.md
rollup_anchor/: bundler.py
scripts/: README.md  backup-cron.sh  backup-db.sh  export-openapi.py  restore-db.sh  run-e2e.sh  setup-template.sh  start-planning-agent.sh  sync-claude-harness.sh  test-x402-poc.sh
sdk/python/: README.md  pyproject.toml
sdk/python/rendertrust/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/templates/module_boilerplate/: agent.py
sdk/python/tests/: __init__.py  test_sdk.py
specs/: README.md  REN-22-edge-node-scheduler-v1.md  REN-26-ci-cd-pipeline.md  REN-47-credit-ledger-integration.md  REN-61-core-platform-bootstrap.md
tests/: __init__.py  conftest.py  test_anchoring.py  test_autoscale.py  test_circuit_breaker.py  test_cpu_plugin.py  test_credit_api.py  test_edge_docker.py  test_encryption.py  test_gpu_metrics.py  test_health.py  test_job_service.py  test_ledger_idempotency.py  test_ledger_service.py  test_metrics.py  test_mtls.py  test_node_crypto.py  test_openapi.py  test_payout_service.py  test_proof_api.py  test_rate_limit.py  test_registration_cli.py  test_relay.py  test_relay_client.py  test_retry_service.py  test_storage_service.py  test_stripe_webhook.py  test_token_blacklist.py  test_usage_service.py  test_worker_executor.py  test_x402_poc.py
(+200 files in other folders)
