[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rendertrust"
version = "0.1.0"
description = "Python SDK for the RenderTrust API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ByBren, LLC", email = "scott@cheddarfox.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/ByBren-LLC/rendertrust"
Documentation = "https://github.com/ByBren-LLC/rendertrust/tree/dev/sdk/python"
Repository = "https://github.com/ByBren-LLC/rendertrust"
Issues = "https://github.com/ByBren-LLC/rendertrust/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
